change/page title

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,4 +3,4 @@ primaryColor="#2E58FF"
 backgroundColor="#FFFFFF"
 secondaryBackgroundColor="#F0F2F6"
 textColor="#3363636"
-font="roboto"
+font="Roboto"
